# yt-to-skill

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-text-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-output-and-cli/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-visual-enrichment/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_errors.py  test_extract.py  test_filter.py  test_ingest.py  test_installer.py  test_keyframe.py  test_llm_client.py  test_models.py  test_orchestrator.py  test_resolver.py  test_skill.py  test_transcript.py  test_translate.py
yt_to_skill/: __init__.py  cli.py  config.py  errors.py  installer.py  orchestrator.py  resolver.py
yt_to_skill/glossary/: trading_zh_en.json
yt_to_skill/llm/: __init__.py  client.py
yt_to_skill/models/: __init__.py  artifacts.py  extraction.py
yt_to_skill/stages/: __init__.py  base.py  extract.py  filter.py  ingest.py  keyframe.py  skill.py  transcript.py  translate.py
(+10 files in other folders)
