[project]
name = "yt-to-skill"
version = "0.1.0"
description = "Convert YouTube trading videos to installable Claude skill files"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=0.6.2",
    "faster-whisper>=1.0.0",
    "openai>=1.30.0",
    "instructor>=1.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tenacity>=8.3.0",
    "loguru>=0.7.2",
    "langdetect>=1.0.9",
    "scenedetect[opencv-headless]>=0.6.7",
    "imagehash>=4.3.2",
    "questionary>=2.1.1",
]

[project.scripts]
yt-to-skill = "yt_to_skill.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
